[package]
name = "day03"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
structopt = "0.3.21"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.22"

[dev-dependencies]
rstest = "0.18.2"
