[package]
name = "day11"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.5.10"
rstest = { version = "0.18.2", default-features = false }
thiserror = "1.0.22"

[dev-dependencies]
tempfile = "3.8.1"
