[package]
name = "day11"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.5.11"
rstest = { version = "0.18.2", default-features = false }
thiserror = "1.0.69"

[dev-dependencies]
tempfile = "3.14.0"
